feat: compare bar add

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -42,3 +42,7 @@
 @import "./custom/custom-slick";
 @import "./custom/price-range-slider";
 @import "./custom/custom-next";
+
+
+// custom for compare
+@import "./components/comparebar.scss"
