--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -699,6 +699,17 @@ $_displays: none, inline-block, block, flex;
   }
 }
 
+.compare-banner {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1200;
+  @media (max-width: 1199px) {
+    z-index: 999;
+  }
+}
+
 @include media-below(md) {
   .md\:size-full {
     width: 100%;
@@ -2162,3 +2173,5 @@ table.table-5 {
   background: linear-gradient(to right, #FF5733, #FFBD33);
   box-shadow: 0px 0px 15px rgba(203, 166, 34, 0.80);
 }
+
+
