chore: rearrange sass imports

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -30,6 +30,8 @@
 @import "./components/niceSelect.scss";
 @import "./components/mapFilter.scss";
 @import "./components/hotelsCard.scss";
+@import "./components/comparebar.scss";
+
 
 @import "./components/preloader.scss";
 
@@ -45,4 +47,3 @@
 
 
 // custom for compare
-@import "./components/comparebar.scss"
