chore: table change in view page

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -31,6 +31,8 @@
 @import "./components/mapFilter.scss";
 @import "./components/hotelsCard.scss";
 @import "./components/comparebar.scss";
+@import "./components/compare.scss";
+
 
 
 @import "./components/preloader.scss";
