chore: remove search icon for download

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -32,6 +32,7 @@
 @import "./components/hotelsCard.scss";
 @import "./components/comparebar.scss";
 @import "./components/compare.scss";
+@import "./components/detailBox.scss";
 
 
 
