chore: ui changes

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -47,6 +47,7 @@
 @import "./custom/custom-slick";
 @import "./custom/price-range-slider";
 @import "./custom/custom-next";
+@import "./custom/custom.scss"
 
 
 // custom for compare
