fix: key added to fix error

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -47,7 +47,7 @@
 @import "./custom/custom-slick";
 @import "./custom/price-range-slider";
 @import "./custom/custom-next";
-@import "./custom/custom.scss"
+@import "./custom/custom.scss";
 
 
 // custom for compare
@@ -55,4 +55,4 @@
 
 // custom for view
 
-@import "./components/viewaccordion.scss"
+@import "./components/viewaccordion.scss";
