--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -12,7 +12,7 @@ body {
   padding: 0;
   font-family: var(--font-primary);
   width: 100%;
-  background-color: white;
+  background-color: #FAF9F6;
   color: var(--color-dark-1);
   font-size: $font-size;
   line-height: 1.875;
