feat : popular cards

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -33,6 +33,7 @@
 @import "./components/comparebar.scss";
 @import "./components/compare.scss";
 @import "./components/detailBox.scss";
+@import "./components/varaintCard.scss";
 
 
 
