--- a/public/sass/components/viewaccordion.scss
+++ b/public/sass/components/viewaccordion.scss
@@ -9,9 +9,15 @@
     // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+.tab_iconsize{
+    width: 2%;
+}
 
 @media only screen and (max-width: 600px) {
     .title_fontsize{
         font-size: 0.45em;
+    }
+    .tab_iconsize{
+        width: 40%;
     }
   }
