--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -15,6 +15,8 @@
   max-width: 300px;
 }
 
+
+
 @media (max-width: 767px) {
     .truck-card {
       max-width: 100%; /* Change max-width to 100% on mobile screens */
@@ -103,5 +105,11 @@
   }
 }
 
+
+.custom-shadow {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  border: 0.25px #ddd;
+}
 
 
