--- a/public/sass/components/viewaccordion.scss
+++ b/public/sass/components/viewaccordion.scss
@@ -1,10 +1,7 @@
 .title_fontsize{
     font-size: 0.5em;
 }
-.view_tablefontsize{
-    font-size: 0.1em;
-    background-color: yellow;
-}
+
 .view_bordershadow{
     // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -13,11 +10,21 @@
     width: 2%;
 }
 
+
 @media only screen and (max-width: 600px) {
     .title_fontsize{
         font-size: 0.45em;
     }
     .tab_iconsize{
         width: 40%;
+    }
+    .view_tablefontsize{
+        font-size: 0.85em !important;
+        // background-color: yellow;
+    }
+    .table_rowtext{
+        padding: 0% !important;
+        width: 500px !important;
+        // background-color: red !important;
     }
   }
