--- a/public/sass/components/viewaccordion.scss
+++ b/public/sass/components/viewaccordion.scss
@@ -27,4 +27,13 @@
         width: 500px !important;
         // background-color: red !important;
     }
+    .table_rowstext{
+        padding-top: 0% !important;
+        width: 500px !important;
+        // background-color: red !important;
+    }
+    .filter_tabs{
+        padding-left: 60vw;
+        width: auto;
+    }
   }
