compate info table

--- a/public/sass/components/viewaccordion.scss
+++ b/public/sass/components/viewaccordion.scss
@@ -23,13 +23,16 @@
         // background-color: yellow;
     }
     .table_rowtext{
-        padding: 0% !important;
-        width: 500px !important;
+        padding-top: 1% !important;
+        padding-bottom: 1% !important;
+        padding-left: 0% !important;
+        width: 600px !important;
         // background-color: red !important;
     }
     .table_rowstext{
-        padding-top: 0% !important;
-        width: 500px !important;
+        padding-top: 1% !important;
+        padding-bottom: 1%;
+        // width: 500px !important;
         // background-color: red !important;
     }
     .filter_tabs{
