--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -15,13 +15,11 @@
   max-width: 300px;
 }
 
-
-
 @media (max-width: 767px) {
-    .truck-card {
-      max-width: 100%; /* Change max-width to 100% on mobile screens */
-    }
+  .truck-card {
+    max-width: 100%; /* Change max-width to 100% on mobile screens */
   }
+}
 
 .truck-card:hover {
   transform: scale(1.03);
@@ -87,24 +85,22 @@
   color: #ff6600;
 }
 
-
 .articlePadding {
 }
 
 @media (max-width: 767px) {
   .articlePadding {
-    padding-top: 28px; 
-    padding-bottom: 28px; 
-}
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
 }
 
 @media (min-width: 768px) {
   .articlePadding {
-    padding-top: 60px; 
-    padding-bottom: 60px; 
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
-
 
 .custom-shadow {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -112,4 +108,51 @@
   border: 0.25px #ddd;
 }
 
+.mobileCard {
+  @media (max-width: 768px) {
+    .mobileCard {
+      display: none;
+    }
+  }
 
+  @media (min-width: 769px) {
+    .mobileCard {
+      display: block;
+    }
+  }
+}
+
+.indivitualCardGrid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  
+}
+
+
+.search-truck-card {
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  border: 0.25px #ddd;
+  overflow: hidden;
+  transition: transform 0.2s;
+  margin-bottom: 20px;
+  min-width: 300px;
+}
+
+@media (max-width: 767px) {
+  .search-truck-card {
+    max-width: 100%; /* Change max-width to 100% on mobile screens */
+  }
+}
+
+
+.hideMobile{
+
+}
+
+@media (max-width: 767px) {
+  .hideMobile {
+    display: none;
+  }
+}
