--- a/public/sass/components/viewaccordion.scss
+++ b/public/sass/components/viewaccordion.scss
@@ -9,7 +9,16 @@
 .tab_iconsize{
     width: 2%;
 }
-
+.tab_iconsize{
+    width: 5vw;
+    
+}
+// .table_rowstext{
+//     width: 100px !important;
+// }
+// .table_rowtext{
+//     width: 100px;       
+// }
 
 @media only screen and (max-width: 600px) {
     .title_fontsize{
@@ -22,6 +31,7 @@
         font-size: 0.85em !important;
         // background-color: yellow;
     }
+    
     .table_rowtext{
         padding-top: 1% !important;
         padding-bottom: 1% !important;
