chore: tabs ui fix

--- a/public/sass/components/tabs.scss
+++ b/public/sass/components/tabs.scss
@@ -75,9 +75,16 @@
   overflow: auto;
   scroll-snap-type: x mandatory;
   white-space: nowrap;
+  justify-content: center;
 
   > div {
     scroll-snap-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .tabs__controls {
+    justify-content: flex-start; /* Adjust as needed */
   }
 }
 
