--- a/public/sass/components/tabs.scss
+++ b/public/sass/components/tabs.scss
@@ -75,16 +75,19 @@
   overflow: auto;
   scroll-snap-type: x mandatory;
   white-space: nowrap;
-  justify-content: center;
 
   > div {
     scroll-snap-align: center;
   }
 }
 
+.tabs__controls_buttons{
+  justify-content: center;
+}
+
 @media screen and (max-width: 768px) {
-  .tabs__controls {
-    justify-content: flex-start; /* Adjust as needed */
+  .tabs__controls_buttons {
+    justify-content: flex-start !important;
   }
 }
 
