--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -97,6 +97,20 @@
   color: #ff6600;
 }
 
+.truck-card-zoom {
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.truck-card-zoom img {
+  width: 100%;
+  transition: 0.5s all ease-in-out;
+}
+
+.truck-card-zoom:hover img {
+  transform: scale(1.05);
+}
+
 
 
 @media (max-width: 767px) {
