--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -15,6 +15,21 @@
   max-width: 300px;
 }
 
+.brand-card {
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  border: 0.25px #ddd;
+  overflow: hidden;
+  transition: transform 0.2s;
+  margin-bottom: 20px;
+  max-width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .truck-card-compare {
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -31,13 +46,21 @@
   .truck-card {
     max-width: 100%; /* Change max-width to 100% on mobile screens */
   }
+  .brand-card{
+    max-width: 100%; /* Change max-width to 100% on mobile screens */
+  }
 }
 
 .truck-card:hover {
   transform: scale(1.03);
 }
-
+.brand-card:hover {
+  transform: scale(1.03);
+}
 .truck-card__image {
+  position: relative;
+}
+.brand-card__image {
   position: relative;
 }
 
@@ -46,6 +69,12 @@
   height: auto;
 }
 
+.brand-card img {
+  // padding: 10px;
+  // padding-top: 15px;
+  width: 100%;
+  height: auto;
+}
 .truck-card__content {
   padding: 15px;
 }
