--- a/public/sass/custom/custom.scss
+++ b/public/sass/custom/custom.scss
@@ -1,39 +1,36 @@
 $font-size-xl: 30px;
-$font-size-small: 18px; 
+$font-size-small: 18px;
 
 .search-font-custom {
-  font-size: $font-size-xl; 
-  
-  @media (max-width: 1199px) { 
-    font-size: $font-size-xl; 
+  font-size: $font-size-xl;
+
+  @media (max-width: 1199px) {
+    font-size: $font-size-xl;
   }
 
-  @media (max-width: 991px) { 
-    font-size: $font-size-xl - 2px; 
+  @media (max-width: 991px) {
+    font-size: $font-size-xl - 2px;
   }
 
-  @media (max-width: 767px) { 
-    font-size: $font-size-small;  
+  @media (max-width: 767px) {
+    font-size: $font-size-small;
   }
-} 
+}
 
 .custom-padding-search {
- padding: 40px 0px 40px 0px !important;
- @media (max-width: 1199px) { 
   padding: 40px 0px 40px 0px !important;
-}
+  @media (max-width: 1199px) {
+    padding: 40px 0px 40px 0px !important;
+  }
 
-@media (max-width: 991px) { 
-  font-size: $font-size-xl - 2px; 
-}
+  @media (max-width: 991px) {
+    font-size: $font-size-xl - 2px;
+  }
 
-@media (max-width: 767px) { 
-  padding: 8px 0px 8px 0px !important;
- 
+  @media (max-width: 767px) {
+    padding: 8px 0px 8px 0px !important;
+  }
 }
-   
-}
-
 
 .link-like-container {
   color: inherit; /* Use the default text color */
@@ -46,6 +43,13 @@ $font-size-small: 18px;
 }
 
 .custom-dropdown-menu {
-  max-height: 300px; /* Set the maximum height for the dropdown menu */
-  overflow-y: auto; /* Enable vertical scrolling */
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 767px) {
+  .custom-dropdown-menu {
+    max-height: 200px;
+  }
 }
