--- a/public/sass/components/compare.scss
+++ b/public/sass/components/compare.scss
@@ -19,4 +19,16 @@
     }
   }
 
+  .compare-vs{
+    position: fixed;
+    z-index: 100;
+    margin-left: -10px;
+  }
 
+  .compare-image img{
+    height: 100px;
+  }
+
+  // .compare-card-link{
+  //   width: 2;
+  // }
