--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -40,7 +40,9 @@
   overflow: hidden;
   // transition: transform 0.2s;
   margin-bottom: 20px;
-  max-width: 300px;
+  max-width: 450px;
+  height: 300px;
+
 }
 
 
