--- a/public/sass/components/hotelsCard.scss
+++ b/public/sass/components/hotelsCard.scss
@@ -224,13 +224,14 @@
 }
 
 .carCard.-type-1 {
+
   .carCard {
     &__image {
       overflow: hidden;
       border-radius: 4px;
-
       .cardImage__content .swiper-slide,
       .cardImage__content > img {
+        
         transition: all 0.8s $easeOutQuart;
       }
 
@@ -239,6 +240,9 @@
         z-index: 2;
       }
     }
+  }
+  .cardImage__content{
+    height: 500px;
   }
 
   &:hover {
@@ -333,3 +337,5 @@
     }
   }
 }
+
+
