--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -40,13 +40,21 @@
   overflow: hidden;
   // transition: transform 0.2s;
   margin-bottom: 20px;
-  max-width: 450px;
+  // width: 255px;
+  max-width: 300px;
   height: 300px;
 
 }
 
+@media (min-width: 900px) {
+  .truck-card-compare{
+    width: 255px;
+  }
+}
+
 
 @media (max-width: 767px) {
+  
   .truck-card {
     max-width: 100%; /* Change max-width to 100% on mobile screens */
   }
