--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -24,9 +24,9 @@
   border: 0.25px #ddd;
   overflow: hidden;
   transition: transform 0.2s;
-  margin-bottom: 20px;
-  max-width: 200px;
-  height: 200px;
+  // margin-bottom: 20px;
+  width: 200px;
+  height: 170px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,15 +34,16 @@
 
 .truck-card-compare {
   background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 3px;
   border: 0.25px #ddd;
   overflow: hidden;
   // transition: transform 0.2s;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   // width: 255px;
   max-width: 300px;
-  height: 300px;
+  height: 255px;
 
 }
 
@@ -86,7 +87,8 @@
   // padding: 10px;
   // padding-top: 15px;
   width: 100%;
-  height: auto;
+  // height: 60%;
+  // height: fit-conten;
 }
 .truck-card__content {
   padding: 15px;
