--- a/public/sass/components/compare.scss
+++ b/public/sass/components/compare.scss
@@ -25,10 +25,13 @@
     margin-left: -14px;
   }
 
-  .compare-image img{
-    border-radius: 0px;
-    height: 100px;
-  }
+  // .compare-image{
+  //   height: 200px;
+  //   background-color: blueviolet;
+  // }
+  // .compare-image img{
+  //   height: 100px;
+  // }
 
   // .compare-card-link{
   //   width: 2;
