--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -43,7 +43,7 @@
   margin-bottom: 30px;
   // width: 255px;
   max-width: 300px;
-  height: 255px;
+  max-height: 300px;
 
 }
 
@@ -231,3 +231,6 @@
 // .blogcardView Image{
 //   height: 500px;
 // }
+.compare_onwards{
+  margin-top: -5px;
+}
