--- a/public/sass/components/header.scss
+++ b/public/sass/components/header.scss
@@ -315,14 +315,17 @@
         position: absolute;
         top: 100%;
         background-color: white;
+        left: 30%;
         padding: 30px;
         border-radius: 4px;
         color: var(--color-dark-1);
-        width: 800px;
+        width: 650px;
         box-shadow: 0px 10px 30px 0px #05103608;
         transition: all 0.2s $easeOutQuart;
         opacity: 0;
         pointer-events: none;
+        transform: translateX(-30%);
+        
 
         &__content {
           display: flex;
