--- a/public/sass/components/citiesCard.scss
+++ b/public/sass/components/citiesCard.scss
@@ -10,8 +10,9 @@
   align-items: center;
 }
 .brandCardImage img{
-  background-size: cover !important;
-  width: 50%;
+  // background-size: cover !important;
+  width: 100%;
+  height: 120px;
 }
 
 .brandCardImage img{
