--- a/public/sass/custom/custom.scss
+++ b/public/sass/custom/custom.scss
@@ -57,3 +57,14 @@ $font-size-small: 18px;
 .contact_text {
   color: blue;
 }
+
+
+.hideMobile {
+  @media(min-width: 992px) {
+    display: flex;
+  } 
+
+  @media (max-width: 991px) {
+    display: none;
+  }
+}
