--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -234,6 +234,27 @@
 // .blogcardView Image{
 //   height: 500px;
 // }
+// .blogcardView{
+
+// }
 .compare_onwards{
   margin-top: -5px;
+}
+
+.customCardContainer{
+  // margin-top: -110px;
+}
+
+.searchResultContainer{
+  height: 46px;
+  overflow: hidden;
+}
+.cardSliderContainer{
+  
+  height: 135px;
+}
+
+.blogHeadingContainer{
+  height: 80px;
+  overflow: hidden;
 }
