--- a/public/sass/components/citiesCard.scss
+++ b/public/sass/components/citiesCard.scss
@@ -118,7 +118,7 @@
   position: relative;
   z-index: 0;
   // height: 120px;
-  // width: 100%;
+  // width: 500px;
 
   .citiesCard {
     &__image {
@@ -201,4 +201,7 @@
       color: white !important;
     }
   }
+}
+.tobrandCard{
+  width: 190px !important;
 }
