fix: ui issues fix

--- a/public/sass/components/footer.scss
+++ b/public/sass/components/footer.scss
@@ -14,3 +14,21 @@
 .footerContainer{
   // width: 90vw;
 }
+
+.displayInMedium {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: block; 
+  }
+}
+
+.displayInMobile {
+  display: block; 
+
+
+  @media (min-width: 768px) {
+  display: none;
+
+  }
+}
